; ModuleID = '/home/carl/AnghaBench/openssl/crypto/x509/extr_x509_trs.c_X509_TRUST_get_by_id.c'
source_filename = "/home/carl/AnghaBench/openssl/crypto/x509/extr_x509_trs.c_X509_TRUST_get_by_id.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32 }

@X509_TRUST_MIN = common dso_local global i32 0, align 4
@X509_TRUST_MAX = common dso_local global i32 0, align 4
@trtable = common dso_local global i32* null, align 8
@X509_TRUST_COUNT = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @X509_TRUST_get_by_id(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca %struct.TYPE_3__, align 4
  %5 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %6 = load i32, i32* %3, align 4
  %7 = load i32, i32* @X509_TRUST_MIN, align 4
  %8 = icmp sge i32 %6, %7
  br i1 %8, label %9, label %17

9:                                                ; preds = %1
  %10 = load i32, i32* %3, align 4
  %11 = load i32, i32* @X509_TRUST_MAX, align 4
  %12 = icmp sle i32 %10, %11
  br i1 %12, label %13, label %17

13:                                               ; preds = %9
  %14 = load i32, i32* %3, align 4
  %15 = load i32, i32* @X509_TRUST_MIN, align 4
  %16 = sub nsw i32 %14, %15
  store i32 %16, i32* %2, align 4
  br label %33

17:                                               ; preds = %9, %1
  %18 = load i32*, i32** @trtable, align 8
  %19 = icmp eq i32* %18, null
  br i1 %19, label %20, label %21

20:                                               ; preds = %17
  store i32 -1, i32* %2, align 4
  br label %33

21:                                               ; preds = %17
  %22 = load i32, i32* %3, align 4
  %23 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %4, i32 0, i32 0
  store i32 %22, i32* %23, align 4
  %24 = load i32*, i32** @trtable, align 8
  %25 = call i32 @sk_X509_TRUST_find(i32* %24, %struct.TYPE_3__* %4)
  store i32 %25, i32* %5, align 4
  %26 = load i32, i32* %5, align 4
  %27 = icmp slt i32 %26, 0
  br i1 %27, label %28, label %29

28:                                               ; preds = %21
  store i32 -1, i32* %2, align 4
  br label %33

29:                                               ; preds = %21
  %30 = load i32, i32* %5, align 4
  %31 = load i32, i32* @X509_TRUST_COUNT, align 4
  %32 = add nsw i32 %30, %31
  store i32 %32, i32* %2, align 4
  br label %33

33:                                               ; preds = %29, %28, %20, %13
  %34 = load i32, i32* %2, align 4
  ret i32 %34
}

declare dso_local i32 @sk_X509_TRUST_find(i32*, %struct.TYPE_3__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
